# mlops_finances

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Output_23497036.err  Output_23497036.out  README.md  cloudbuild.yaml  config_cpu.yaml  data.dvc  economic_calendar.csv  environment.devenv.yml  environment.yml  jobscript.sh  mlops_finances.sublime-project  mypy.ini  pyproject.toml  report.html  report.py  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py  test.py  trainer.dockerfile  usd_chf_last_month.csv
.dvc/: config
.github/workflows/: deploy.yaml  linting.yaml  tests.yaml  unittests.yaml
configs/: config.yaml
configs/model/: deep_learning.yaml
dockerfiles/: api.dockerfile  train.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
model/: model.pth
notebooks/: EDA.ipynb
reports/: README.md  report.html
src/finance/: api.py  data.py  evaluate.py  fetch_data.py  main.py  model.py  train.py  visualize.py
src/finance/models/: __init__.py  deep_learning.py  logistic_regression.py  random_forest.py
tests/: __init__.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20250124_211846-2suuxzje/: run-2suuxzje.wandb
wandb/run-20250124_211846-2suuxzje/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
